dont forget about env files

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-	"dependencies": {
-		"concurrently": "^4.1.0",
-		"nodemon": "^1.18.11"
-	},
-	"scripts": {
-		"start": "concurrently \"cd client && npm run start\" \"cd backend && npm run start \" "
-	}
+  "dependencies": {
+    "concurrently": "^4.1.0"
+  },
+  "scripts": {
+    "start": "concurrently \"cd client && npm run start\" \"cd backend && npm run start \" "
+  }
 }
