--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "node-env-run": "^3.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -14,7 +15,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "127.0.0.1:3001/",
+  "proxy": "http://127.0.0.1:3001/",
   "eslintConfig": {
     "extends": "react-app"
   },
