--- a/client/package.json
+++ b/client/package.json
@@ -4,19 +4,29 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material/react-material-icon": "^0.12.0",
+    "@material/react-text-field": "^0.12.0",
+    "axios": "^0.18.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.find": "^4.6.0",
     "lodash.remove": "^4.7.0",
     "node-env-run": "^3.0.2",
+    "nprogress": "^0.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loader-spinner": "^2.3.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-topbar-progress-indicator": "^2.0.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-debounce": "^1.0.1",
     "redux-debounced": "^0.5.0",
     "redux-thunk": "^2.3.0",
+    "redux-undo": "^0.6.1",
+    "semantic-ui-react": "^0.86.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
