--- a/backend/package.json
+++ b/backend/package.json
@@ -6,15 +6,21 @@
     "start": "nodemon --signal SIGHUP ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
+    "ejs": "^2.6.1",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jwt-simple": "^0.5.6",
     "lodash.remove": "^4.7.0",
     "mongoose": "^5.5.1",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
