--- a/backend/package.json
+++ b/backend/package.json
@@ -9,18 +9,24 @@
     "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
+    "csv": "^5.1.1",
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
+    "fast-csv": "^2.5.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jwt-simple": "^0.5.6",
     "lodash.remove": "^4.7.0",
     "mongoose": "^5.5.1",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "lorem-ipsum": "^2.0.2"
   }
 }
