--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
     "axios": "^0.18.0",
     "lodash.debounce": "^4.0.8",
     "lodash.find": "^4.6.0",
+    "lodash.merge": "^4.6.1",
+    "lodash.omit": "^4.5.0",
+    "lodash.pickby": "^4.6.0",
     "lodash.remove": "^4.7.0",
     "node-env-run": "^3.0.2",
     "normalizr": "^3.3.0",
@@ -24,8 +27,10 @@
     "redux-form": "^8.2.0",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^0.6.1",
+    "reselect": "^4.0.0",
     "semantic-ui-react": "^0.86.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
