--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "lodash.debounce": "^4.0.8",
     "lodash.find": "^4.6.0",
+    "lodash.isempty": "^4.4.0",
     "lodash.merge": "^4.6.1",
     "lodash.omit": "^4.5.0",
     "lodash.pickby": "^4.6.0",
