--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.5",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/pickers": "^3.0.0-rc.0",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "@material/react-material-icon": "^0.12.0",
     "@material/react-text-field": "^0.12.0",
     "axios": "^0.18.0",
+    "date-fns": "^2.0.0-alpha.27",
     "lodash.debounce": "^4.0.8",
     "lodash.find": "^4.6.0",
     "lodash.isempty": "^4.4.0",
