--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^1.3.5",
-    "@material-ui/core": "^3.9.3",
+    "@date-io/date-fns": "^1.3.6",
+    "@material-ui/core": "^4.0.0-beta.1",
     "@material-ui/icons": "^3.0.2",
-    "@material-ui/pickers": "^3.0.0-rc.0",
-    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/pickers": "^3.0.0-beta.1",
     "@material/react-material-icon": "^0.12.0",
     "@material/react-text-field": "^0.12.0",
     "axios": "^0.18.0",
@@ -19,14 +18,18 @@
     "lodash.omit": "^4.5.0",
     "lodash.pickby": "^4.6.0",
     "lodash.remove": "^4.7.0",
+    "moment": "^2.24.0",
     "node-env-run": "^3.0.2",
     "normalizr": "^3.3.0",
     "react": "^16.8.6",
+    "react-dates": "^20.2.0",
     "react-dom": "^16.8.6",
+    "react-multiple-datepicker": "^0.1.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-topbar-progress-indicator": "^2.0.0",
+    "react-with-direction": "^1.3.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
     "redux-form": "^8.2.0",
