--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.6",
-    "@material-ui/core": "^4.0.0-beta.1",
+    "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/pickers": "^3.0.0-beta.1",
     "@material/react-material-icon": "^0.12.0",
@@ -32,7 +32,7 @@
     "react-with-direction": "^1.3.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.5",
-    "redux-form": "^8.2.0",
+    "redux-form": "^8.2.3",
     "redux-thunk": "^2.3.0",
     "redux-undo": "^0.6.1",
     "reselect": "^4.0.0",
