--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "concurrently": "^4.1.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "redux-form": "^8.2.3"
   },
   "scripts": {
     "start": "concurrently \"cd client && npm run start\" \"cd backend && npm run start \" "
