--- a/client/package.json
+++ b/client/package.json
@@ -34,11 +34,9 @@
     "redux-actions": "^2.6.5",
     "redux-form": "^8.2.3",
     "redux-thunk": "^2.3.0",
-    "redux-undo": "^0.6.1",
     "reselect": "^4.0.0",
     "semantic-ui-react": "^0.86.0",
-    "styled-components": "^4.2.0",
-    "uuid": "^3.3.2"
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
