--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "redux-form": "^8.2.3"
   },
   "scripts": {
-    "start": "concurrently \"cd client && npm run start\" \"cd backend && npm run start \" ",
+    "start": "concurrently \"cd client && npm run start\" \"cd backend && npm run dev \" ",
     "heroku-postbuild": "cd client && npm install && npm run build"
   }
 }
