--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "@material/react-material-icon": "^0.12.0",
     "@material/react-text-field": "^0.12.0",
     "axios": "^0.18.0",
-    "date-fns": "^2.0.0-alpha.27",
+    "date-fns": "2.0.0-alpha.27",
     "lodash.debounce": "^4.0.8",
     "lodash.find": "^4.6.0",
     "lodash.isempty": "^4.4.0",
