--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
-    "express": "~4.16.0",
+    "express": "4.16.0",
     "fast-csv": "^2.5.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
