--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "nodemon --signal SIGHUP ./bin/www",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "all": "concurrently \"npm run dev\" \"cd client && npm run start\" "
   },
   "engines": {
     "node": "10.7.0"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "concurrently": "4.1.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "csv": "^5.1.1",
