--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/pickers": "^3.0.0-beta.1",
+    "@material-ui/styles": "4.0.2",
     "@material/react-material-icon": "^0.12.0",
     "@material/react-text-field": "^0.12.0",
     "axios": "^0.18.0",
