--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jwt-simple": "^0.5.6",
+    "lodash.includes": "4.3.0",
     "lodash.remove": "^4.7.0",
     "mongoose": "^5.5.1",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pretty-error": "2.1.1",
+    "validator": "11.1.0"
   },
   "devDependencies": {},
   "description": "Software for School Science Labs",
