--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,13 @@
     "@material/react-text-field": "^0.12.0",
     "axios": "^0.18.0",
     "date-fns": "2.0.0-alpha.27",
-    "lodash.debounce": "^4.17.13",
-    "lodash.find": "^4.17.13",
-    "lodash.isempty": "^4.17.13",
-    "lodash.merge": "^4.17.13",
-    "lodash.omit": "^4.17.13",
-    "lodash.pickby": "^4.17.13",
-    "lodash.remove": "^4.17.13",
+    "lodash.debounce": "4.0.8",
+    "lodash.find": "^4.6.0",
+    "lodash.isempty": "^4.4.0",
+    "lodash.merge": "^4.6.2",
+    "lodash.omit": "^4.5.0",
+    "lodash.pickby": "^4.6.0",
+    "lodash.remove": "^4.7.0",
     "moment": "^2.24.0",
     "node-env-run": "^3.0.2",
     "normalizr": "^3.3.0",
